; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_threads.c_vlc_global_mutex.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_threads.c_vlc_global_mutex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlc_global_mutex.locks = internal constant [4 x i32] [i32 128, i32 128, i32 128, i32 128], align 16
@VLC_MAX_MUTEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Wrong number of global mutexes\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_global_mutex(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @VLC_MAX_MUTEX, align 4
  %7 = sext i32 %6 to i64
  %8 = icmp eq i64 %7, 4
  %9 = zext i1 %8 to i32
  %10 = call i32 @static_assert(i32 %9, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = icmp ult i64 %12, 4
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* getelementptr inbounds ([4 x i32], [4 x i32]* @vlc_global_mutex.locks, i64 0, i64 0), i64 %17
  store i32* %18, i32** %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %2
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @vlc_mutex_lock(i32* %22)
  br label %27

24:                                               ; preds = %2
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @vlc_mutex_unlock(i32* %25)
  br label %27

27:                                               ; preds = %24, %21
  ret void
}

declare dso_local i32 @static_assert(i32, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
